<resources>
    <string name="app_name">TesteZap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rooms">Dormitórios</string>
    <string name="price">Preço</string>
    <string name="progress_dialog">Agurade ...</string>
    <string name="please_wait">Sincronizando dados</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="userFulArea">Area Util</string>
    <string name="suites">Suites</string>
    <string name="priceCondominium">Condomineo</string>
    <string name="title_activity_main2">Contato</string>
    <string name="label_name">Nome</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Telefone</string>
    <string name="required">Este campo é obrigatório</string>
    <string name="mssage_reuquired">Por favor preencha os campos obrigatórios.</string>
    <string name="success_title">Legal :)</string>
    <string name="sucess_message">Seu interesse foi envidado com Sucesso.</string>
    <string name="ok">Ok</string>
    <string name="error_title">Woops !!!</string>
    <string name="error_message">Dados nao enviados, tente novamente mais tarde.</string>
    <string name="label_message">Mensagem</string>
    <string name="message_default">Olá tenho interesse no imovel. Obrigado. Codigo :</string>
    <string name="label_description">Descrição</string>
    <string name="more_information">Mais Informações</string>
    <string name="label_address">Endereço</string>
    <string name="error_data_message">Imóvel nao encontrado.</string>
    <string name="error_connection">Verifique sua  conexão e tente novamente.</string>
    <string name="error_data_connection">Erro ao buscar dados , verifique sua conexão e tente novamente.</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_filter">Filtrar</string>
    <string name="priceRange">Faixa de Preço</string>
    <string name="label_type">Tipo</string>
    <string name="select_item">Selecione um item</string>
    <string name="label_characteristics">Caracteristicas</string>
    <string name="label_characteristics_features">Caracteristicas comuns</string>
</resources>
