<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:rsb="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_filter"
        android:padding="20dp"
        tools:context="com.example.luis.testeIlegra.Activities.FilterActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priceRange"
            />
        <org.florescu.android.rangeseekbar.RangeSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rsb:absoluteMaxValue="1000000"
                rsb:absoluteMinValue="100000"
                android:id="@+id/seekBar"
                rsb:textAboveThumbsColor="@color/cardview_dark_background"
             />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rooms"
                />
        <RadioGroup
                android:id="@+id/roomsRaidoGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="30dp"
                android:gravity="center"
             >

            <RadioButton
                    android:id="@+id/rooms1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="1"
                    android:checked="true"
                    />
            <RadioButton
                    android:id="@+id/rooms2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="2"
                    />

            <RadioButton
                    android:id="@+id/rooms3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="3"
                    />
            <RadioButton
                    android:id="@+id/rooms4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="4"
                    />
        </RadioGroup>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suites"
                />
        <RadioGroup
                android:id="@+id/suitesRaido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="30dp"
                android:gravity="center"
                >
            <RadioButton
                    android:id="@+id/suitesRaido0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="0"
                    android:checked="true"
                    />
            <RadioButton
                    android:id="@+id/suitesRaido1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="1"

                    />
            <RadioButton
                    android:id="@+id/suitesRaido2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="2"
                    />

            <RadioButton
                    android:id="@+id/suitesRaido3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="3"
                    />
            <RadioButton
                    android:id="@+id/suitesRaido4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="4"
                    />
        </RadioGroup>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_type"
                />
        <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/types"
                >

        </Spinner>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
